# admitly-ai

Backend/: .gitignore  check_db.py  main.py  pyproject.toml  test_output.txt
Backend/app/config/: dbconfig.py
Backend/app/models/: admin.py  user.py
Backend/app/routes/: stats.py  upload_file.py  user.py
Backend/app/services/: llm_service.py  stats_service.py  user_details_service.py  user_service.py
Backend/prompt/: quality_prompt.py  system_prompt.py
Frontend/frontend/: package-lock.json  package.json
Frontend/frontend/app/: globals.css  layout.tsx
Frontend/frontend/app/(dashboard)/: layout.tsx
Frontend/frontend/app/(dashboard)/analytics/: page.tsx
Frontend/frontend/app/(dashboard)/calls/: page.tsx
Frontend/frontend/app/(dashboard)/calls/[id]/: page.tsx
Frontend/frontend/app/(dashboard)/dashboard/: page.tsx
Frontend/frontend/app/(dashboard)/students/: page.tsx
Frontend/frontend/app/(dashboard)/upload-students/: page.tsx
Frontend/frontend/components/: theme-toggle.tsx
Frontend/frontend/components/analytics/: AnalyticsCharts.tsx
Frontend/frontend/components/dashboard/: DashboardCharts.tsx  MetricCard.tsx  RecentCalls.tsx  VolumeChart.tsx
Frontend/frontend/components/layout/: Sidebar.tsx  Topbar.tsx
