[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.1.0",
    "fastapi[standard]>=0.135.3",
    "litellm>=1.83.3",
    "motor>=3.6.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "vapi-server-sdk>=1.9.0",
]

[tool.uv.workspace]
members = [
    "@vapi-ai/web",
]
